# olver

./: POSIX_LICENSE  README  SUSv2_LICENSE  agent_perm.sh  build_conf_tests.sh  build_prerequisites.sh  configure.sh  install.sh
config/: Description.txt  Makefile  min.tp  olver.missing  olver.run  olver.tp  olver.tree  test.xml
config/supplements/: pccts-1.33mr32-1rh71.i386.rpm
doc/: olver-reports-eng.odt  olver-reports-rus.doc
etc/: olver.conf  olver_ia64.conf  olver_ppc.conf  olver_ppc64.conf  olver_s390.conf  olver_s390x.conf  olver_x86_64.conf  stochastic.conf  times.ref
package/: HOWTO  Makefile  build-olver-core-rpm.sh  lsb-test-olver-core.spec  lsb-test-olver-core.spec.sed  rpmmacros  rpmrc
src/: dc_sock.c
src/agent/: .cvsignore  Makefile  build_config.sh  miss.c
src/model/: .cvsignore  Makefile  common.dsp
src/olverterm/: Makefile  README.txt  addon.h  build.sh  common.h  communicate.c  dump.c  itp_opts.c  ltpct  memterm.c  memterm.h  memterm_prog.c  socket.c  test.sh  tic.sh  tools.c  vt.c
src/olverterm/lib/: ChangeLog  Makefile.in  README  README.jp  configure.in  get_libiterm.sh
src/olverterm/lib/include/: Makefile.in
src/olverterm/lib/include/iterm/: Makefile.in  core.h  io.h
src/olverterm/lib/include/iterm/unix/: Makefile.in
src/olverterm/lib/src/: Makefile.am  Makefile.in  core.c  screen.c  screen_row.c  screen_visual_row.c  tabs.h  vt100.c
src/olverterm/lib/src/unix/: Makefile.am  Makefile.in
src/olverterm/lib/src/unix/tty/: Makefile.am  Makefile.in  ttyio.c
src/testdata/: build_testdata.sh  install_testdata.sh  uninstall_testdata.sh
tools/BugDB/: BugDB.xml  (+2 more)
(+3163 files in other folders)
