# Process this file with autoconf to produce a configure script.
AC_INIT(src/core.c, 0.4, jir@yamato.ibm.com)
#AC_CONFIG_SRCDIR(src/core.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libiterm,0.4)

# Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB
AM_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h locale.h stdlib.h string.h sys/ioctl.h termios.h unistd.h wchar.h wctype.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T

# Checks for library functions.
#AC_FUNC_FORK
#AC_FUNC_MALLOC
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(fork malloc dup2 mbrtowc memmove memset setlocale wcwidth)


# Checking use of layout engines
AM_CONDITIONAL(DEBUG, test "$enable_debug" = yes)
AM_CONDITIONAL(BIDI,false)

# Checking use of utempter
AC_ARG_WITH(utempter,
[  --with-utempter         use libutempter to access utmp],use_utempter=yes)

if test "$use_utempter" = yes; then
   AC_CHECK_LIB(utempter,addToUtmp)
fi

#AC_CONFIG_FILES([src/unix/Makefile
#                 src/unix/fribidi_layout/test/Makefile
#                 src/unix/pls_layout/test/Makefile
#                 src/unix/pthread/Makefile
#                 test/screen/Makefile])

AC_OUTPUT(Makefile 
          src/Makefile 
	  src/unix/Makefile
	  src/unix/tty/Makefile
	  include/Makefile
	  include/iterm/Makefile
	  include/iterm/unix/Makefile
	  )
